--- a/conf/graphview.conf
+++ b/conf/graphview.conf
@@ -6,7 +6,7 @@ ip = 127.0.0.1
 port = 5518
 adminport = 5519
 # lb_bin_dir should end with "/bin"
-lb_bin_dir = /home/pgview/tools/logicblox/bin
+lb_bin_dir = ~/tools/logicblox/bin
 
 [postgres]
 ip = 127.0.0.1
