--- a/pom.xml
+++ b/pom.xml
@@ -87,13 +87,27 @@
 			<version>2.8.6</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.8.6</version>
-		</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.8.6</version>
+	</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.neo4j.driver/neo4j-java-driver -->
+	<!-- Spark Java web framework for REST API -->
+	<dependency>
+		<groupId>com.sparkjava</groupId>
+		<artifactId>spark-core</artifactId>
+		<version>2.9.4</version>
+	</dependency>
+	
+	<!-- Gson for JSON -->
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.9</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.neo4j.driver/neo4j-java-driver -->
 		<dependency>
 			<groupId>org.neo4j.driver</groupId>
 			<artifactId>neo4j-java-driver</artifactId>
@@ -312,19 +326,28 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.6.0</version>
 				<executions>
-					<execution>
-						<id>console</id>
-						<goals>
-							<goal>java</goal>
-						</goals>
-						<configuration>
-							<mainClass>edu.upenn.cis.db.graphtrans.Client</mainClass>
-							<arguments>
-								<argument>-o</argument> <!-- FIXME -->
-								<argument>abc</argument>
-							</arguments>
-						</configuration>
-					</execution>
+				<execution>
+					<id>console</id>
+					<goals>
+						<goal>java</goal>
+					</goals>
+					<configuration>
+						<mainClass>edu.upenn.cis.db.graphtrans.Client</mainClass>
+						<arguments>
+							<argument>-o</argument> <!-- FIXME -->
+							<argument>abc</argument>
+						</arguments>
+					</configuration>
+				</execution>
+				<execution>
+					<id>api</id>
+					<goals>
+						<goal>java</goal>
+					</goals>
+					<configuration>
+						<mainClass>edu.upenn.cis.db.graphtrans.api.GraphViewAPI</mainClass>
+					</configuration>
+				</execution>
 					<execution>
 						<id>gen</id>
 						<goals>
